--- a/index.html
+++ b/index.html
@@ -286,104 +286,108 @@
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="6" aria-label="Slide 7"></button>
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="7" aria-label="Slide 8"></button>
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="8" aria-label="Slide 9"></button>
+        <!--
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9" aria-label="Slide 10"></button>
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="10" aria-label="Slide 11"></button>
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="11" aria-label="Slide 12"></button>
         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="12" aria-label="Slide 13"></button>
+        -->
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="001.JPG" class="d-block w-100" alt="Granite Flooring">
+          <img src="001.JPG" class="d-block w-100" alt="Vitrified tiles flooring">
           <div class="carousel-caption">
-            <h5>Granite Flooring</h5>
+            <h5>Vitrified tiles flooring</h5>
             <p>Well built</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="002.JPG" class="d-block w-100" alt="Granite Flooring">
+          <img src="002.JPG" class="d-block w-100" alt="Vitrified tiles flooring">
           <div class="carousel-caption">
-            <h5>Granite Flooring</h5>
+            <h5>Vitrified tiles flooring</h5>
             <p>Well built</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="003.jpg" class="d-block w-100" alt="Granite Flooring">
+          <img src="003.jpg" class="d-block w-100" alt="Vitrified tiles flooring">
           <div class="carousel-caption">
-            <h5>Granite Flooring</h5>
+            <h5>Vitrified tiles flooring</h5>
             <p>Well built</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="004.jpg" class="d-block w-100" alt="Granite Flooring">
+          <img src="004.jpg" class="d-block w-100" alt="Vitrified tiles flooring">
           <div class="carousel-caption">
-            <h5>Granite Flooring</h5>
+            <h5>Vitrified tiles flooring</h5>
             <p>Well built</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="005.jpg" class="d-block w-100" alt="Granite Flooring">
+          <img src="005.jpg" class="d-block w-100" alt="Vitrified tiles flooring">
           <div class="carousel-caption">
-            <h5>Granite Flooring</h5>
+            <h5>Vitrified tiles flooring</h5>
             <p>Well built</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="006.JPG" class="d-block w-100" alt="Granite Flooring">
+          <img src="006.JPG" class="d-block w-100" alt="Vitrified tiles flooring">
           <div class="carousel-caption">
-            <h5>Granite Flooring</h5>
+            <h5>Vitrified tiles flooring</h5>
             <p>Well built</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="007.JPG" class="d-block w-100" alt="Granite Flooring">
+          <img src="007.JPG" class="d-block w-100" alt="Vitrified tiles flooring">
           <div class="carousel-caption">
-            <h5>Granite Flooring</h5>
+            <h5>Vitrified tiles flooring</h5>
             <p>Well built</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="008.JPG" class="d-block w-100" alt="Granite Flooring">
+          <img src="008.JPG" class="d-block w-100" alt="Vitrified tiles flooring">
           <div class="carousel-caption">
-            <h5>Granite Flooring</h5>
+            <h5>Vitrified tiles flooring</h5>
+            <p>Well built</p>
+          </div>
+        </div>
+        <!--
+        <div class="carousel-item">
+          <img src="009.JPG" class="d-block w-100" alt="Vitrified tiles flooring">
+          <div class="carousel-caption">
+            <h5>Vitrified tiles flooring</h5>
             <p>Well built</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="009.JPG" class="d-block w-100" alt="Granite Flooring">
+          <img src="010.JPG" class="d-block w-100" alt="Vitrified tiles flooring">
           <div class="carousel-caption">
-            <h5>Granite Flooring</h5>
+            <h5>Vitrified tiles flooring</h5>
             <p>Well built</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="010.JPG" class="d-block w-100" alt="Granite Flooring">
+          <img src="011.JPG" class="d-block w-100" alt="Vitrified tiles flooring">
           <div class="carousel-caption">
-            <h5>Granite Flooring</h5>
+            <h5>Vitrified tiles flooring</h5>
             <p>Well built</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="011.JPG" class="d-block w-100" alt="Granite Flooring">
+          <img src="012.JPG" class="d-block w-100" alt="Vitrified tiles flooring">
           <div class="carousel-caption">
-            <h5>Granite Flooring</h5>
+            <h5>Vitrified tiles flooring</h5>
             <p>Well built</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img src="012.JPG" class="d-block w-100" alt="Granite Flooring">
+          <img src="013.jpg" class="d-block w-100" alt="Vitrified tiles flooring">
           <div class="carousel-caption">
-            <h5>Granite Flooring</h5>
-            <p>Well built</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="013.jpg" class="d-block w-100" alt="Granite Flooring">
-          <div class="carousel-caption">
-            <h5>Granite Flooring</h5>
+            <h5>Vitrified tiles flooring</h5>
             <p>Well built</p>
           </div>
         </div>
       </div>
+      -->
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
